Fixed spacing on play page

--- a/styles/play.scss
+++ b/styles/play.scss
@@ -55,12 +55,12 @@
             height: 150px;
             overflow: hidden;
             border-radius: 0.5rem;
-            margin-bottom: 1rem;
+            margin-bottom: 1.5rem;
             object-fit: cover;
 
             @media (min-width: 1400px) {
                 margin-bottom: 0;
-                margin-right: 1rem;
+                margin-right: 1.5rem;
             }
         }
     }
@@ -81,11 +81,11 @@
             border-radius: 0.5rem;
             aspect-ratio: 16/9;
             object-fit: cover;
-            margin-bottom: 1rem;
+            margin-bottom: 1.5rem;
 
             @media (min-width: 1400px) {
                 margin-bottom: 0;
-                margin-right: 1rem;
+                margin-right: 1.5rem;
             }
         }
 
@@ -97,11 +97,11 @@
             display: inline-flex;
             justify-content: center;
             align-items: center;
-            margin-bottom: 1rem;
+            margin-bottom: 1.5rem;
 
             @media (min-width: 1400px) {
                 margin-bottom: 0;
-                margin-right: 1rem;
+                margin-right: 1.5rem;
             }
         }
     }
